@@ -1,5 +1,5 @@
 use super::*;
-use std::cell::Ref;
+use std::cell::{Ref, RefMut};
 use std::fmt::{self, Display};
 use std::ops::{Deref, DerefMut};
 
@@ -9,7 +9,7 @@ pub struct SparseValueMut<'a, S: DeserializeOwned + Serialize + SparsableTrait> 
     #[getset(get_copy = "pub", get_mut = "pub")]
     version: Option<u64>,
     #[getset(get = "pub")]
-    path: PathBuf,
+    path: Option<PathBuf>,
     #[getset(get = "pub")]
     pointer: Option<&'a String>,
     state_cell: Rc<RefCell<SparseState>>,
@@ -49,16 +49,43 @@ impl<'a, S> SparseValueMut<'a, S>
 where
     S: DeserializeOwned + Serialize + SparsableTrait,
 {
+    pub fn try_deref_raw_pointer<T: 'static + DeserializeOwned + Serialize + SparsableTrait>(
+        curr: &SparseValueMut<'_, S>,
+        ptr: String,
+        state_cell: Rc<RefCell<SparseState>>,
+    ) -> Result<SparseSelector<T>, SparseError> {
+        let current_path: Option<&PathBuf> = curr.path().as_ref();
+        let (mut val, metadata): (SparseSelector<T>, SparseMetadata) = {
+            let mut state_mut: RefMut<'_, SparseState> = state_cell
+                .try_borrow_mut()
+                .map_err(|_e| SparseError::StateAlreadyBorrowed)?;
+            let metadata = SparseMetadata::new(
+                ptr.clone(),
+                current_path
+                    .unwrap_or_else(|| state_mut.get_root_path())
+                    .clone(),
+            );
+            let sref: SparseRef<T> =
+                SparseRef::new(&mut *state_mut, metadata.pfile_path().clone(), ptr, 0)?;
+            (SparseSelector::Obj(SparsePointedValue::Ref(sref)), metadata)
+        };
+        let mut state_mut: RefMut<'_, SparseState> = state_cell
+            .try_borrow_mut()
+            .map_err(|_e| SparseError::StateAlreadyBorrowed)?;
+        val.sparse_init(&mut *state_mut, &metadata, 0)?;
+        Ok(val)
+    }
+
     pub(crate) fn new(
         sref: &'a mut S,
         state_cell: Rc<RefCell<SparseState>>,
-        metadata: &'a SparseMetadata,
+        metadata: Option<&'a SparseMetadata>,
     ) -> Self {
         SparseValueMut {
             sref,
-            version: Some(metadata.version()),
-            path: metadata.pfile_path().clone(),
-            pointer: Some(metadata.pointer()),
+            version: metadata.map(|x| x.version()),
+            path: metadata.map(|x| x.pfile_path()).cloned(),
+            pointer: metadata.map(|x| x.pointer()),
             state_cell,
         }
     }
@@ -80,7 +107,7 @@ where
         Ok(SparseValueMut {
             sref,
             version: Some(version),
-            path,
+            path: Some(path),
             pointer: None,
             state_cell,
         })
@@ -89,11 +116,21 @@ where
     /// Persists the object to the state.
     /// One should call `sparse_updt` on the root after saving something in the state.
     pub fn sparse_save(&self) -> Result<(), SparseError> {
+        let file_path: PathBuf = {
+            let state = self
+                .state_cell
+                .try_borrow()
+                .map_err(|_e| SparseError::StateAlreadyBorrowed)?;
+            self.path
+                .as_ref()
+                .cloned()
+                .unwrap_or_else(|| state.get_root_path().clone())
+        };
         let mut state = self
             .state_cell
             .try_borrow_mut()
             .map_err(|_e| SparseError::StateAlreadyBorrowed)?;
-        let file: &mut SparseStateFile = state.get_state_file_mut(&self.path)?;
+        let file: &mut SparseStateFile = state.get_state_file_mut(&file_path)?;
         match self.pointer {
             Some(pointer) => {
                 let pointed_value = file
