@@ -5,6 +5,9 @@
 - Changed how the proc macro resolve its crate name
 - Added a public function to get the `SparsePointedValue` from `SparseRefRaw`
 - Added the `semver` feature, adding support for `semver::{Version, VersionReq}`
+- Changed how the `SparseValueMut` is constructed.
+- Added a function to resolve a new pointer at runtime using a `SparseValue` or a `SparseValueMut`
+
 ## [0.1.1] - 2021-01-20
 ### Added
 - Support for `Option<T>`
